[package]
name = "ruwak-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruwak = { version = "0.1.0", path = "..", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
